--- a/index.html
+++ b/index.html
@@ -165,6 +165,16 @@
                 </div>
                 <div class="project-card">
                     <div class="project-image">
+                        <img src="KK logo.jpg" alt="My Portfolio">
+                        <div class="project-overlay">
+                            <h3>Khaana Khayoo </h3>
+                            <p>A food delivery app developed using Java full-stack Web development</p>
+                            <a href="https://github.com/HariGanesh2004/Restaurant.git" target="_blank" class="btn">View Project</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image">
                         <img src="project3.jpeg" alt="My Portfolio">
                         <div class="project-overlay">
                             <h3>E-health Smart System</h3>
